# scrapeMM

./: .gitignore  README.md  common.py  config.yaml  pyproject.toml  requirements.txt  retrieval.py  unsupported_domains.txt  util.py
config/: __init__.py  globals.yaml
docs/superpowers/specs/: 2026-07-19-perma-telegram-media-design.md
integrations/: __init__.py  telegram.py  x.py
scrapemm/: __init__.py  api_keys.py  common.py  retrieval.py  secrets.py  util.py
scrapemm/common/: __init__.py  exceptions.py  retrieval_integration.py  scraping_response.py
scrapemm/download/: __init__.py  common.py  images.py  media.py  requests.py  util.py  videos.py
scrapemm/integrations/: __init__.py  archive_org.py  archive_today.py  awesomescreenshot.py  base.py  bluesky.py  decodo.py  fb.py  ghostarchive.py  headed_browser.py  instagram.py  mediavault.py  mvault.py  perma_cc.py  reddit.py  telegram.py  tiktok.py  wayback_machine.py  x.py  youtube.py  ytdlp.py
scrapemm/integrations/decodo/: __init__.py  decodo.py  html_postprocessor.py
scrapemm/integrations/firecrawl/: firecrawl.py  no_bot_domains.txt
scrapemm/scraping/: __init__.py  decodo.py  firecrawl.py  util.py  ytdlp.py
scraping/: firecrawl.py  util.py
scripts/: configure.py  configure_secrets.py  download.py  example.py  test_scrape.py
testing/: benchmark.py  conftest.py  test_archiving_site.py  test_download.py  test_retrieval.py  test_social_media.py  test_urls.txt  test_utils.py
