[project]
name = "scrapeMM"
version = "0.1.3"
description = "LLM-friendly scraper for media and text from social media and the open web."
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [{name = "Mark Rothermel", email = "mark.rothermel@tu-darmstadt.de"}]
dependencies = [
    "ezmm",
    "telethon",
    "tweepy",
    "markdownify",
    "keyring",
    "platformdirs",
    "PyYAML"
]

[project.urls]
"Homepage" = "https://github.com/multimodal-ai-lab/scrapeMM"
"Bug Tracker" = "https://github.com/multimodal-ai-lab/scrapeMM"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["scrapemm*"]
exclude = ["*.egg-info", "tests*", "in*", "scripts*", "temp*", "config.yaml", "dist*"]
