[project]
name = "scrapeMM"
version = "0.7.4"
description = "Multimodal scraper for social media, internet archives, and the open web."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{name = "Mark Rothermel", email = "mark.rothermel@tu-darmstadt.de"}]
dependencies = [
    "aiohttp~=3.14.1",
    "async_lru",
    "atproto~=0.0.69",
    "beautifulsoup4",
    "backports.zstd",  # For better content parsing with Firecrawl
    "brotli",  # Required to read brotli-encoded media
    "cryptography",
    "curl_cffi~=0.15.0",  # Provides browser binaries for impersonation
    "ezmm~=0.5.1",
    "firecrawl-py~=4.32.0",
    "markdownify~=1.2.3",
    "pip-system-certs",  # For better SSL certificate handling
    "platformdirs~=4.10.0",
    "playwright",
    "playwright-stealth",
    "seleniumbase~=4.44.20",  # Package conflict with atproto on the websockets package. Upgrade only when atproto supports websockets>=16.1
    "prompt_toolkit",  # For handling user terminal input
    "PyYAML~=6.0.1",
    "requests~=2.34.2",
    "telethon~=1.44.0",
    "TikTokResearchApi~=1.0.4",
    "tqdm~=4.68.4",
    "tweepy~=4.17.0",
    "yt-dlp[default,curl-cffi]",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[project.urls]
Homepage = "https://github.com/multimodal-ai-lab/scrapeMM"
Issues = "https://github.com/multimodal-ai-lab/scrapeMM"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
namespaces = false  # Disable implicit namespaces

[tool.setuptools.package-data]
"*" = ["*.txt"]  # Include all .txt files contained in any (sub)package in the build

[tool.pytest.ini_options]
testpaths = [
    "testing/",
]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"